apps/cdi/base/gateway.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cdi
  namespace: cdi
spec:
  gatewayClassName: cilium
  listeners:
  - name: cdi-uploadproxy
    hostname: cdi-uploadproxy.seigra.net
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
